--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Build with Next.js 🏗️
         run: npm run build
 
+      - name: Export static site 📦
+        run: npm run export
+
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
         with:
