🔧 fix: add sleep step before building Next.js application in GitHub Actions workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           static_site_generator: next
 
+      - name: Esperar 10 segundos ⏳
+        run: sleep 10
+
       - name: Build with Next.js 🏗️
         run: npm run build
 
